Changed file structure and other changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TigrisWorks - Custom Software Development Services</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/styles/styles.css" />
   </head>
   <body class="bg-gray-50">
     <!-- Header -->
@@ -277,36 +277,93 @@
         <h1
           class="font-inter text-[36px] font-semibold leading-[44px] tracking-[-0.02em] text-center mb-6"
         >
-          Why Choose Tigris Works?
+          Why Choose
+          <span
+            class="font-inter text-[36px] font-semibold leading-[44px] tracking-[-0.02em] text-orange-600"
+            >Us</span
+          >
+          ?
         </h1>
         <p
           class="font-inter text-[20px] font-normal leading-[30px] text-center text-[#667085] mb-8"
         >
-          At Tigris Works, we stand out because of our:
+          At Tigris Works, we stand out because of our
         </p>
 
-        <div class="grid md:grid-cols-3 gap-8">
+        <div class="grid md:grid-cols-3 gap-8 text-left">
           <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Scalable Team Availability</h3>
+            <img
+              src="assets/icons/why-us/scalable.svg"
+              alt="Icon"
+              class="inline-block w-[48px] h-[48px] p-[12px_0_0_0] mb-2"
+            />
+
+            <h3
+              class="font-inter text-[20px] font-medium leading-[30px] text-left"
+            >
+              Scalable Team Availability
+            </h3>
+            <p class="text-gray-600">
+              Our team is scalable to meet the evolving needs of your project,
+              ensuring that we have the right resources available at every
+              stage.
+            </p>
           </div>
           <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Excellent Business expertise</h3>
+            <h3
+              class="font-inter text-[20px] font-medium leading-[30px] text-left"
+            >
+              Excellent Business expertise
+            </h3>
+            <p class="text-gray-600">
+              We bring excellent business expertise to the table, combining
+              industry knowledge with strategic insights to drive your success.
+            </p>
           </div>
           <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Transparent Communication</h3>
+            <h3
+              class="font-inter text-[20px] font-medium leading-[30px] text-left"
+            >
+              Transparent Communication
+            </h3>
+            <p class="text-gray-600">
+              We prioritize transparent communication, keeping you informed and
+              involved throughout the entire process.
+            </p>
           </div>
 
           <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Clear Vision</h3>
+            <h3
+              class="font-inter text-[20px] font-medium leading-[30px] text-left"
+            >
+              Clear Vision
+            </h3>
+            <p class="text-gray-600">
+              Our clear vision aligns with your goals, ensuring a focused and
+              cohesive approach to every project.
+            </p>
           </div>
           <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Efficient Project Management</h3>
+            <h3
+              class="font-inter text-[20px] font-medium leading-[30px] text-left"
+            >
+              Efficient Project Management
+            </h3>
+            <p class="text-gray-600">
+              We excel in efficient project management, optimizing resources and
+              timelines to deliver outstanding results.
+            </p>
           </div>
           <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Cost Efficiency</h3>
-          </div>
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Innovative Solutions</h3>
+            <h3
+              class="font-inter text-[20px] font-medium leading-[30px] text-left"
+            >
+              Cost Efficiency
+            </h3>
+            <p class="text-gray-600">
+              Our approach is designed for cost efficiency, maximizing value
+              while staying within budget.
+            </p>
           </div>
         </div>
       </div>
@@ -323,10 +380,12 @@
     <!-- Contact Section -->
     <section class="bg-gray-100 py-16">
       <div class="container mx-auto px-4 text-center">
-        <h2 class="text-3xl font-bold mb-6">
+        <h2 class="text-3xl font-bold mb-6 text-[#101828]">
           Start Transforming Your Business Today
         </h2>
-        <p class="text-lg mb-8">
+        <p
+          class="font-inter text-[20px] font-normal leading-[30px] text-center text-[#667085] mb-8"
+        >
           Unlock the full potential of your business with Tigris Work’s
           comprehensive software development services. Contact us now to get
           started on your digital transformation journey.
