Cname file,  Needs icons and other changes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           >
             At Tigris Works, we deliver top-tier custom software development
             services that transform your vision into scalable, innovative
-            solutions designed for long-term <br />
+            solutions designed for long-term<br />
             success.
           </p>
 
@@ -64,11 +64,11 @@
     <section class="py-16">
       <div class="container mx-auto px-4">
         <h1
-          class="font-inter text-[36px] font-semibold leading-[44px] tracking-[-0.02em] text-center mb-6"
+          class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-center mb-6"
         >
           Tailored
           <span
-            class="font-inter text-[36px] font-semibold leading-[44px] tracking-[-0.02em] text-orange-600"
+            class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-orange-600"
           >
             Software Development Services</span
           >
@@ -85,28 +85,46 @@
         </p>
 
         <div class="grid md:grid-cols-3 gap-8">
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Custom Software Development</h3>
-            <p class="text-gray-600">
+          <div class="flex flex-col gap-1 p-8 rounded-lg">
+            <img
+              src="assets/icons/needs/custom.svg"
+              alt="Icon"
+              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+            />
+            <h3 class="text-xl font-medium mb-4">
+              Custom Software Development
+            </h3>
+            <p class="text-base text-gray-500">
               Custom software development services focused on creating
               personalized, high-performance applications that align with your
-              business objectives, enhance efficiency, and support growth.
+              business objectives, enhance efficiency, and support growth. Our
+              team delivers innovative solutions tailored to your unique needs.
             </p>
           </div>
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">UI/UX Design</h3>
-            <p class="text-gray-600">
+          <div class="flex flex-col gap-1 p-8 rounded-lg">
+            <img
+              src="assets/icons/needs/ui.svg"
+              alt="Icon"
+              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+            />
+            <h3 class="text-xl font-medium mb-4">UI/UX Design</h3>
+            <p class="text-base text-gray-500">
               Our UI/UX design services create intuitive, engaging, and visually
               appealing interfaces that offer seamless user experiences across
               all platforms. We prioritize both aesthetics and functionality to
               ensure your users have an enjoyable and efficient experience.
             </p>
           </div>
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">
+          <div class="flex flex-col gap-1 p-8 rounded-lg">
+            <img
+              src="assets/icons/needs/enterprise.svg"
+              alt="Icon"
+              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+            />
+            <h3 class="text-base text-xl font-medium mb-4">
               Enterprise Software Solutions
             </h3>
-            <p class="text-gray-600">
+            <p class="text-base text-gray-500">
               We provide enterprise software solutions that streamline
               operations, boost efficiency, and support scalability. Our
               tailored systems include ERP, CRM, and other enterprise-level
@@ -114,27 +132,42 @@
             </p>
           </div>
 
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Consulting services</h3>
-            <p class="text-gray-600">
+          <div class="flex flex-col gap-1 p-8 rounded-lg">
+            <img
+              src="assets/icons/needs/consulting.svg"
+              alt="Icon"
+              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+            />
+            <h3 class="text-xl font-medium mb-4">Consulting services</h3>
+            <p class="text-base text-gray-500">
               Expert consulting services that provide strategic guidance on
               software development, technology stack selection, and
               architectural design to drive business innovation and success.
             </p>
           </div>
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">Legacy System Modernization</h3>
-            <p class="text-gray-600">
+          <div class="flex flex-col gap-1 p-8 rounded-lg">
+            <img
+              src="assets/icons/needs/legacy.svg"
+              alt="Icon"
+              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+            />
+            <h3 class="text-xl font-medium mb-4">
+              Legacy System Modernization
+            </h3>
+            <p class="text-base text-gray-500">
               Legacy systems modernization services that upgrade outdated
               technology to enhance performance, compatibility, and efficiency,
               ensuring your systems meet current and future needs.
             </p>
           </div>
-          <div class="bg-white shadow-lg p-8 rounded-lg">
-            <h3 class="text-xl font-bold mb-4">
-              Data Analytics and Business Intelligence
-            </h3>
-            <p class="text-gray-600">
+          <div class="flex flex-col gap-1 p-8 rounded-lg">
+            <img
+              src="assets/icons/needs/data.svg"
+              alt="Icon"
+              class="inline-block w-[48px] h-[48px] p-[1px_0_0_0] mb-2"
+            />
+            <h3 class="text-xl font-medium mb-4">Data Analytics</h3>
+            <p class="text-base text-gray-500">
               Unlock the power of your data with our analytics and business
               intelligence solutions. We transform raw data into actionable
               insights, empowering you to make strategic, data-driven decisions.
@@ -148,15 +181,21 @@
     <section class="bg-gray-100 py-16">
       <div class="container mx-auto px-4 text-center">
         <h2
-          class="font-inter text-[36px] font-semibold leading-[44px] tracking-[-0.02em] text-center mb-6"
+          class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-center mb-6"
         >
-          Our Modern Technology Stack
+          Our
+          <span
+            class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-orange-600"
+            >modern technology</span
+          >
+          stack powers <br />software solutions for diverse global markets
         </h2>
         <p
           class="font-inter text-xl font-normal leading-[30px] text-center text-[#667085] mb-8"
         >
           We utilize a modern technology stack to deliver robust, efficient, and
-          scalable solutions. Our expertise includes:
+          scalable<br />
+          solutions. Our expertise includes:
         </p>
         <div class="grid md:grid-cols-3 gap-8">
           <div class="bg-white shadow-lg p-8 rounded-lg">
@@ -197,11 +236,11 @@
     <section class="py-16">
       <div class="container mx-auto px-4 text-center">
         <h2
-          class="font-inter text-[36px] font-semibold leading-[44px] tracking-[-0.02em] text-center mb-6"
+          class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-center mb-6"
         >
           Our
           <span
-            class="font-inter text-[36px] font-semibold leading-[44px] tracking-[-0.02em] text-orange-600"
+            class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-orange-600"
             >Process</span
           >
         </h2>
@@ -313,11 +352,11 @@
     <section class="py-16">
       <div class="container mx-auto px-4">
         <h1
-          class="font-inter text-[36px] font-semibold leading-[44px] tracking-[-0.02em] text-center mb-6"
+          class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-center mb-6"
         >
           Why Choose
           <span
-            class="font-inter text-[36px] font-semibold leading-[44px] tracking-[-0.02em] text-orange-600"
+            class="font-inter text-4xl font-semibold leading-[44px] tracking-[-0.02em] text-orange-600"
             >Us</span
           >
           ?
@@ -339,7 +378,7 @@
             <h3 class="font-inter text-xl font-medium leading-[30px] text-left">
               Scalable Team Availability
             </h3>
-            <p class="text-gray-600">
+            <p class="text-base text-gray-500">
               Our team is scalable to meet the evolving needs of your project,
               ensuring that we have the right resources available at every
               stage.
@@ -354,7 +393,7 @@
             <h3 class="font-inter text-xl font-medium leading-[30px] text-left">
               Excellent Business expertise
             </h3>
-            <p class="text-gray-600">
+            <p class="text-base text-gray-500">
               We bring excellent business expertise to the table, combining
               industry knowledge with strategic insights to drive your success.
             </p>
@@ -368,7 +407,7 @@
             <h3 class="font-inter text-xl font-medium leading-[30px] text-left">
               Transparent Communication
             </h3>
-            <p class="text-gray-600">
+            <p class="text-base text-gray-500">
               We prioritize transparent communication, keeping you informed and
               involved throughout the entire process.
             </p>
@@ -383,7 +422,7 @@
             <h3 class="font-inter text-xl font-medium leading-[30px] text-left">
               Clear Vision
             </h3>
-            <p class="text-gray-600">
+            <p class="text-base text-gray-500">
               Our clear vision aligns with your goals, ensuring a focused and
               cohesive approach to every project.
             </p>
@@ -397,7 +436,7 @@
             <h3 class="font-inter text-xl font-medium leading-[30px] text-left">
               Efficient Project Management
             </h3>
-            <p class="text-gray-600">
+            <p class="text-base text-gray-500">
               We excel in efficient project management, optimizing resources and
               timelines to deliver outstanding results.
             </p>
@@ -411,7 +450,7 @@
             <h3 class="font-inter text-xl font-medium leading-[30px] text-left">
               Cost Efficiency
             </h3>
-            <p class="text-gray-600">
+            <p class="text-base text-gray-500">
               Our approach is designed for cost efficiency, maximizing value
               while staying within budget.
             </p>
